--- a/src/main/resources/org.example.arzttermin/View/doctorDashboard.fxml
+++ b/src/main/resources/org.example.arzttermin/View/doctorDashboard.fxml
@@ -18,24 +18,24 @@
         <Pane layoutX="10.0" layoutY="60.0" prefHeight="520.0" prefWidth="271.0" style="-fx-background-color: #1A1D22; -fx-border-color: #5e9f5a; -fx-border-width: 5px; -fx-border-radius: 5;">
 
             <children>
-                <Label layoutX="10" layoutY="10" text="Doctor Profile" textFill="WHITE">
+                <Label layoutX="10" layoutY="10" text="Arztprofil" textFill="WHITE">
                     <font><Font name="System Bold" size="16" /></font>
                 </Label>
 
                 <Label layoutX="10" layoutY="40" text="Name:" textFill="WHITE" />
-                <Label fx:id="doctorNameLabel" layoutX="60" layoutY="40" text="Doctor Name" textFill="WHITE" />
+                <Label fx:id="doctorNameLabel" layoutX="60" layoutY="40" text="Arztname" textFill="WHITE" />
 
-                <Label layoutX="10" layoutY="65" text="Email:" textFill="WHITE" />
+                <Label layoutX="10" layoutY="65" text="E-Mail:" textFill="WHITE" />
                 <Label fx:id="doctorEmailLabel" layoutX="60" layoutY="65" text="doctor@email.com" textFill="WHITE" />
 
-                <Label layoutX="10" layoutY="90" text="Specialization:" textFill="WHITE" />
-                <Label fx:id="specializationLabel" layoutX="100" layoutY="90" text="General Physician" textFill="WHITE" />
+                <Label layoutX="10" layoutY="90" text="Fachrichtung:" textFill="WHITE" />
+                <Label fx:id="specializationLabel" layoutX="100" layoutY="90" text="Allgemeinmedizin" textFill="WHITE" />
 
-                <Label layoutX="10" layoutY="115" text="Gender:" textFill="WHITE" />
-                <Label fx:id="genderLabel" layoutX="70" layoutY="115" text="Male" textFill="WHITE" />
+                <Label layoutX="10" layoutY="115" text="Geschlecht: " textFill="WHITE" />
+                <Label fx:id="genderLabel" layoutX="87.0" layoutY="115.0" text="Männlich" textFill="WHITE" />
 
-                <Label layoutX="10" layoutY="140" text="DOB:" textFill="WHITE" />
-                <Label fx:id="dobLabel" layoutX="50" layoutY="140" text="01-01-1990" textFill="WHITE" />
+                <Label layoutX="10" layoutY="140" text="Geburtsdatum:" textFill="WHITE" />
+                <Label fx:id="dobLabel" layoutX="100.0" layoutY="140.0" text="01-01-1990" textFill="WHITE" />
             </children>
         </Pane>
 
@@ -51,7 +51,7 @@
         <Pane layoutX="607.0" layoutY="60.0" prefHeight="520.0" prefWidth="383" style="-fx-background-color: #1A1D22; -fx-border-color: #5e9f5a; -fx-border-width: 5px; -fx-border-radius: 5;">
 
             <children>
-                <Label layoutX="10" layoutY="10" text="Appointments" textFill="WHITE">
+                <Label layoutX="10" layoutY="10" text="Termine" textFill="WHITE">
                     <font><Font name="System Bold" size="16" /></font>
                 </Label>
 
@@ -67,7 +67,7 @@
                 <ScrollPane fx:id="appointmentsScrollPane" layoutX="10.0" layoutY="82.0" prefHeight="401.0" prefWidth="365" style="-fx-background-color: transparent;">
 
                     <content>
-                        <AnchorPane fx:id="appointmentsPane" prefHeight="442.0" prefWidth="346" style="-fx-background-color: #1A1D22;" />
+                        <AnchorPane fx:id="appointmentsPane" prefHeight="433.0" prefWidth="350.0" style="-fx-background-color: #1A1D22;" />
                     </content>
                 </ScrollPane>
             </children>
@@ -85,7 +85,7 @@
         </Label>
 
         <!-- LOGOUT -->
-        <Button fx:id="logoutButton" layoutX="853.0" layoutY="16.0" onAction="#handleLogoutClicked" prefHeight="24.0" prefWidth="93.0" style="-fx-background-color: #ffffff; -fx-background-radius: 9px; -fx-border-radius: 10px;" text="Logout" textFill="#5e9f5a">
+        <Button fx:id="logoutButton" layoutX="853.0" layoutY="16.0" onAction="#handleLogoutClicked" prefHeight="24.0" prefWidth="93.0" style="-fx-background-color: #ffffff; -fx-background-radius: 9px; -fx-border-radius: 10px;" text="Abmelden" textFill="#5e9f5a">
             <font><Font name="System Bold" size="11" /></font>
         </Button>
 
