--- a/src/main/resources/org.example.arzttermin/View/patientDashboard.fxml
+++ b/src/main/resources/org.example.arzttermin/View/patientDashboard.fxml
@@ -14,42 +14,42 @@
     <children>
         <Pane layoutX="6.0" layoutY="45.0" prefHeight="346.0" prefWidth="316.0" style="-fx-background-color: #1A1D22; -fx-border-color: #5e9f5a; -fx-border-width: 5px; -fx-background-radius: 10px; -fx-border-radius: 5px;">
          <children>
-            <Label layoutX="10.0" layoutY="10.0" text="Profile" textFill="#5e9f5a">
+            <Label layoutX="10.0" layoutY="10.0" text="Profil" textFill="#5e9f5a">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
             </Label>
-              <Label layoutX="12.0" layoutY="38.0" prefHeight="20.0" prefWidth="70.0" text="Vorname" textAlignment="CENTER" textFill="WHITE">
+              <Label layoutX="12.0" layoutY="38.0" prefHeight="20.0" prefWidth="70.0" text="Vorname:" textAlignment="CENTER" textFill="WHITE">
                   <font>
                       <Font name="System Bold" size="12.0" />
                   </font>
               </Label>
-              <Label layoutX="13.0" layoutY="64.0" prefHeight="20.0" prefWidth="62.0" text="Nachname" textAlignment="CENTER" textFill="WHITE">
+              <Label layoutX="13.0" layoutY="64.0" prefHeight="20.0" prefWidth="62.0" text="Nachname:" textAlignment="CENTER" textFill="WHITE">
                   <font>
                       <Font name="System Bold" size="12.0" />
                   </font>
               </Label>
-              <Label layoutX="14.0" layoutY="91.0" prefHeight="20.0" prefWidth="62.0" text="Benutzername" textAlignment="CENTER" textFill="WHITE">
+              <Label layoutX="14.0" layoutY="91.0" prefHeight="20.0" prefWidth="62.0" text="Benutzername:" textAlignment="CENTER" textFill="WHITE">
                   <font>
                       <Font name="System Bold" size="12.0" />
                   </font>
               </Label>
-              <Label layoutX="15.0" layoutY="119.0" prefHeight="20.0" prefWidth="52.0" text="Geburtsdatum" textAlignment="CENTER" textFill="WHITE">
+              <Label layoutX="15.0" layoutY="119.0" prefHeight="20.0" prefWidth="52.0" text="Geburtsdatum:" textAlignment="CENTER" textFill="WHITE">
                   <font>
                       <Font name="System Bold" size="12.0" />
                   </font>
               </Label>
-              <Label layoutX="16.0" layoutY="146.0" prefHeight="20.0" prefWidth="52.0" text="Email" textAlignment="CENTER" textFill="WHITE">
+              <Label layoutX="16.0" layoutY="146.0" prefHeight="20.0" prefWidth="52.0" text="E-Mail:" textAlignment="CENTER" textFill="WHITE">
                   <font>
                       <Font name="System Bold" size="12.0" />
                   </font>
               </Label>
-              <Label layoutX="15.0" layoutY="172.0" prefHeight="20.0" prefWidth="52.0" text="Gender" textAlignment="CENTER" textFill="WHITE">
+              <Label layoutX="15.0" layoutY="172.0" prefHeight="20.0" prefWidth="52.0" text="Geschlecht:" textAlignment="CENTER" textFill="WHITE">
                   <font>
                       <Font name="System Bold" size="12.0" />
                   </font>
               </Label>
-              <Label layoutX="15.0" layoutY="198.0" prefHeight="20.0" prefWidth="52.0" text="Rolle" textAlignment="CENTER" textFill="WHITE">
+              <Label layoutX="15.0" layoutY="198.0" prefHeight="20.0" prefWidth="52.0" text="Rolle:" textAlignment="CENTER" textFill="WHITE">
                   <font>
                       <Font name="System Bold" size="12.0" />
                   </font>
@@ -69,17 +69,17 @@
                       <Font name="System Bold" size="12.0" />
                   </font>
               </Label>
-              <Label fx:id="dobLabel1" layoutX="91.0" layoutY="119.0" prefHeight="20.0" prefWidth="98.0" text="Geburtsdatum" textAlignment="CENTER" textFill="WHITE">
+              <Label fx:id="dobLabel1" layoutX="91.0" layoutY="119.0" prefHeight="20.0" prefWidth="98.0" text="Geschlecht" textAlignment="CENTER" textFill="WHITE">
                   <font>
                       <Font name="System Bold" size="12.0" />
                   </font>
               </Label>
-              <Label fx:id="genderLabel1" layoutX="91.0" layoutY="172.0" prefHeight="20.0" prefWidth="98.0" text="Gender" textAlignment="CENTER" textFill="WHITE">
+              <Label fx:id="genderLabel1" layoutX="91.0" layoutY="172.0" prefHeight="20.0" prefWidth="98.0" text="Geschlecht" textAlignment="CENTER" textFill="WHITE">
                   <font>
                       <Font name="System Bold" size="12.0" />
                   </font>
               </Label>
-              <Label fx:id="emailLabel1" layoutX="92.0" layoutY="146.0" prefHeight="20.0" prefWidth="98.0" text="Email" textAlignment="CENTER" textFill="WHITE">
+              <Label fx:id="emailLabel1" layoutX="92.0" layoutY="146.0" prefHeight="20.0" prefWidth="98.0" text="E-Mail" textAlignment="CENTER" textFill="WHITE">
                   <font>
                       <Font name="System Bold" size="12.0" />
                   </font>
@@ -89,7 +89,7 @@
                       <Font name="System Bold" size="12.0" />
                   </font>
               </Label>
-              <Button fx:id="editProfileButton" layoutX="56.0" layoutY="271.0" mnemonicParsing="false" onAction="#editProfile" prefHeight="30.0" prefWidth="106.0" style="-fx-background-color: #5e9f5a; -fx-background-radius: 10;" text="Edit" textFill="WHITE">
+              <Button fx:id="editProfileButton" layoutX="56.0" layoutY="271.0" mnemonicParsing="false" onAction="#editProfile" prefHeight="30.0" prefWidth="106.0" style="-fx-background-color: #5e9f5a; -fx-background-radius: 10;" text="Bearbeiten" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
@@ -106,7 +106,7 @@
                   <Font name="System Bold" size="18.0" />
               </font>
           </Label>
-          <Button layoutX="855.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#handleLogoutClicked" prefHeight="8.0" prefWidth="95.0" style="-fx-background-color: #ffffff; -fx-background-radius: 10px;" text="Logout" textFill="#5e9f5a">
+          <Button layoutX="855.0" layoutY="10.0" mnemonicParsing="false" onMouseClicked="#handleLogoutClicked" prefHeight="8.0" prefWidth="95.0" style="-fx-background-color: #ffffff; -fx-background-radius: 10px;" text="Abmelden" textFill="#5e9f5a">
               <font>
                   <Font name="System Bold" size="12.0" />
               </font>
@@ -118,7 +118,7 @@
             
                     <Pane layoutX="524.0" layoutY="401.0" prefHeight="190.0" prefWidth="468.0" style="-fx-background-color: #1A1D22; -fx-border-color: #5e9f5a; -fx-border-width: 5px; -fx-background-radius: 10px; -fx-border-radius: 5;">
             <children>
-                <Label layoutX="10.0" layoutY="10.0" text="Doctors" textFill="#5e9f5a">
+                <Label layoutX="10.0" layoutY="10.0" text="Meine Termine" textFill="#5e9f5a">
                     <font>
                         <Font name="System Bold" size="14.0" />
                     </font>
@@ -132,7 +132,7 @@
         </Pane>
       <Pane layoutX="5.0" layoutY="401.0" prefHeight="190.0" prefWidth="510.0" style="-fx-background-color: #1A1D22; -fx-border-color: #5e9f5a; -fx-border-width: 5px; -fx-background-radius: 10px; -fx-border-radius: 5;">
          <children>
-            <Label layoutX="10.0" layoutY="10.0" text="My Appointments" textFill="#5e9f5a">
+            <Label layoutX="10.0" layoutY="10.0" text="Meine Termine" textFill="#5e9f5a">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -146,7 +146,7 @@
       </Pane>
       <Pane layoutX="676.0" layoutY="45.0" prefHeight="346.0" prefWidth="316.0" style="-fx-background-color: #1A1D22; -fx-border-color: #5E9F5A; -fx-border-width: 5px; -fx-border-radius: 5px; -fx-background-radius: 10px;">
          <children>
-            <Label layoutX="10.0" layoutY="10.0" text="Book Appointment" textFill="#5e9f5a">
+            <Label layoutX="10.0" layoutY="10.0" text="Termin buchen" textFill="#5e9f5a">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -165,7 +165,7 @@
             </Label>
 
                                                                                       <!-- Specialization Selection -->
-              <Label layoutX="16.0" layoutY="74.0" text="Specialization:" textFill="WHITE">
+              <Label layoutX="16.0" layoutY="74.0" text="Fachrichtung:" textFill="WHITE">
                  <font>
                     <Font name="System Bold" size="11.0" />
                  </font>
@@ -173,7 +173,7 @@
               <ComboBox fx:id="specializationComboBox" layoutX="97.0" layoutY="69.0" prefHeight="25.0" prefWidth="173.0" />
 
                                                                                     <!-- Doctor Selection -->
-            <Label layoutX="15.0" layoutY="115.0" text="Doctor:" textFill="WHITE">
+            <Label layoutX="15.0" layoutY="115.0" text="Ärzte:" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
@@ -181,7 +181,7 @@
             <ComboBox fx:id="doctorComboBox" layoutX="97.0" layoutY="111.0" prefHeight="25.0" prefWidth="173.0" />
 
                                                                                     <!-- Date Selection -->
-            <Label layoutX="13.0" layoutY="158.0" text="Date:" textFill="WHITE">
+            <Label layoutX="13.0" layoutY="158.0" text="Datum:" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
@@ -189,7 +189,7 @@
             <ComboBox fx:id="dateComboBox" layoutX="97.0" layoutY="154.0" prefHeight="25.0" prefWidth="173.0" />
 
                                                                                     <!-- Time Selection -->
-            <Label layoutX="12.0" layoutY="201.0" text="Time:" textFill="WHITE">
+            <Label layoutX="12.0" layoutY="201.0" text="Uhrzeit:" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="11.0" />
                </font>
@@ -197,7 +197,7 @@
             <ComboBox fx:id="timeComboBox" layoutX="97.0" layoutY="197.0" prefHeight="25.0" prefWidth="173.0" />
 
                                                                                     <!-- Book Button -->
-            <Button fx:id="bookAppointmentBtn" layoutX="58.0" layoutY="279.0" mnemonicParsing="false" onAction="#bookAppointmentFromDashboard" prefHeight="30.0" prefWidth="200.0" style="-fx-background-color: #5E9F5A #5E9F5A; -fx-background-radius: 10;" text="Book Appointment" textFill="WHITE">
+            <Button fx:id="bookAppointmentBtn" layoutX="58.0" layoutY="279.0" mnemonicParsing="false" onAction="#bookAppointmentFromDashboard" prefHeight="30.0" prefWidth="200.0" style="-fx-background-color: #5E9F5A #5E9F5A; -fx-background-radius: 10;" text="Termin buchen" textFill="WHITE">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
@@ -208,7 +208,7 @@
          <children>
       
                                                 <!-- Doctor Profile Content -->
-            <AnchorPane fx:id="doctorProfilePane" layoutX="10.0" layoutY="14.0" prefHeight="319.0" prefWidth="397.0" />
+            <AnchorPane fx:id="doctorProfilePane" layoutX="10.0" layoutY="11.0" prefHeight="322.0" prefWidth="327.0" />
          </children>
       </Pane>
 
