--- a/src/main/resources/org.example.arzttermin/View/login.fxml
+++ b/src/main/resources/org.example.arzttermin/View/login.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootPane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.doctorappointmentsystem.ViewModel.LoginController">
+<AnchorPane fx:id="rootPane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.arzttermin.ViewModel.LoginController">
     <children>
         <ImageView fitHeight="600.0" fitWidth="1000.0" pickOnBounds="true" preserveRatio="false">
             <image>
@@ -34,20 +34,20 @@
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <TextField fx:id="usernameField" layoutX="34.0" layoutY="145.0" prefHeight="25.0" prefWidth="284.0" promptText="Benutzername" style="-fx-background-color: #000000; -fx-border-color: #ffffff;" />
-                <PasswordField fx:id="passwordField" layoutX="34.0" layoutY="211.0" prefHeight="25.0" prefWidth="284.0" promptText="passwort" style="-fx-background-color: #000000; -fx-border-color: #ffffff;" />
+                <TextField fx:id="usernameField" layoutX="34.0" layoutY="145.0" prefHeight="25.0" prefWidth="284.0" promptText="Benutzername" style="-fx-background-color: #ffffff; -fx-border-color: #ffffff;" />
+                <PasswordField fx:id="passwordField" layoutX="34.0" layoutY="211.0" prefHeight="25.0" prefWidth="284.0" promptText="passwort" style="-fx-background-color: #ffffff; -fx-border-color: #ffffff;" />
                 <Label fx:id="errorLabel" layoutX="36.0" layoutY="292.0" text="Fehler" textFill="RED" />
                 <Button layoutX="82.0" layoutY="323.0" mnemonicParsing="false" onAction="#loginButtonClicked" prefHeight="35.0" prefWidth="208.0" style="-fx-background-color: #5E9F5A;" text="Anmelden" textFill="WHITE">
                     <font>
                         <Font name="System Bold" size="14.0" />
                     </font>
                 </Button>
-                <Button layoutX="106.0" layoutY="421.0" mnemonicParsing="false" onAction="#signUpButtonClicked" prefHeight="30.0" prefWidth="150.0" style="-fx-background-color: #5E9F5A;" text="Registrieren" textFill="WHITE">
+                <Button layoutX="104.0" layoutY="427.0" mnemonicParsing="false" onAction="#signUpButtonClicked" prefHeight="30.0" prefWidth="150.0" style="-fx-background-color: #5E9F5A;" text="Registrieren" textFill="WHITE">
                     <font>
                         <Font name="System Bold" size="14.0" />
                     </font>
                 </Button>
-                <Label layoutX="18.0" layoutY="396.0" text="Noch kein Konto?" textFill="WHITE" />
+                <Label layoutX="18.0" layoutY="396.0" text="Haben Sie noch kein Konto?" textFill="WHITE" />
             </children>
         </Pane>
         <ImageView fitHeight="131.0" fitWidth="115.0" layoutX="882.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
