--- a/src/main/resources/org.example.arzttermin/View/doctorDashboard.fxml
+++ b/src/main/resources/org.example.arzttermin/View/doctorDashboard.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.image.Image?>
@@ -10,7 +9,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootPane" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.doctorappointmentsystem.ViewModel.DoctorDashboardController">
+<AnchorPane fx:id="rootPane" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.arzttermin.ViewModel.DoctorDashboardController">
 
     <children>
 
@@ -54,14 +53,6 @@
                 <Label layoutX="10" layoutY="10" text="Termine" textFill="WHITE">
                     <font><Font name="System Bold" size="16" /></font>
                 </Label>
-
-                <!-- Filter-Beschriftung -->
-                <Label layoutX="10.0" layoutY="55.0" text="Termine filtern:" textFill="WHITE">
-                    <font><Font size="12.0" /></font>
-                </Label>
-
-                <!-- Date-Filter -->
-                <DatePicker fx:id="dayFilterDatePicker" layoutX="120.0" layoutY="50.0" onAction="#onFilterChanged" prefHeight="25.0" prefWidth="170.0" />
 
                 <!-- APPOINTMENT LIST -->
                 <ScrollPane fx:id="appointmentsScrollPane" layoutX="10.0" layoutY="82.0" prefHeight="401.0" prefWidth="365" style="-fx-background-color: transparent;">
