--- a/src/main/resources/org.example.arzttermin/View/login.fxml
+++ b/src/main/resources/org.example.arzttermin/View/login.fxml
@@ -36,7 +36,7 @@
                 </Label>
                 <TextField fx:id="usernameField" layoutX="34.0" layoutY="145.0" prefHeight="25.0" prefWidth="284.0" promptText="Benutzername" style="-fx-background-color: #ffffff; -fx-border-color: #ffffff;" />
                 <PasswordField fx:id="passwordField" layoutX="34.0" layoutY="211.0" prefHeight="25.0" prefWidth="284.0" promptText="passwort" style="-fx-background-color: #ffffff; -fx-border-color: #ffffff;" />
-                <Label fx:id="errorLabel" layoutX="36.0" layoutY="292.0" text="Fehler" textFill="RED" />
+                <Label fx:id="errorLabel" layoutX="36.0" layoutY="292.0" text="Fehler" textFill="RED" visible="false" />
                 <Button layoutX="82.0" layoutY="323.0" mnemonicParsing="false" onAction="#loginButtonClicked" prefHeight="35.0" prefWidth="208.0" style="-fx-background-color: #5E9F5A;" text="Anmelden" textFill="WHITE">
                     <font>
                         <Font name="System Bold" size="14.0" />
