--- a/src/main/resources/org.example.arzttermin/View/doctorDashboard.fxml
+++ b/src/main/resources/org.example.arzttermin/View/doctorDashboard.fxml
@@ -8,6 +8,8 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.DatePicker?>
 
 <AnchorPane fx:id="rootPane" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: black;" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.arzttermin.ViewModel.DoctorDashboardController">
 
@@ -53,6 +55,19 @@
                 <Label layoutX="10" layoutY="10" text="Termine" textFill="#5e9f5a">
                     <font><Font name="System Bold" size="16" /></font>
                 </Label>
+                <!-- FILTER -->
+                <Label layoutX="10" layoutY="40" text="Termin filtern" textFill="WHITE" />
+
+                <TextField fx:id="nameFilterField"
+                           layoutX="110"
+                           layoutY="38"
+                           prefWidth="140"
+                           promptText="Name" />
+
+                <DatePicker fx:id="dateFilterPicker"
+                            layoutX="260"
+                            layoutY="38"
+                            prefWidth="110" />
 
                 <!-- APPOINTMENT LIST -->
                 <ScrollPane fx:id="appointmentsScrollPane" layoutX="10.0" layoutY="82.0" prefHeight="401.0" prefWidth="365" style="-fx-background-color: transparent;">
