--- a/src/main/resources/org.example.arzttermin/View/login.fxml
+++ b/src/main/resources/org.example.arzttermin/View/login.fxml
@@ -10,47 +10,47 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootPane" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.arzttermin.ViewModel.LoginController">
+<AnchorPane fx:id="rootPane" prefHeight="1024.0" prefWidth="1600.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.arzttermin.ViewModel.LoginController">
     <children>
-        <ImageView fitHeight="600.0" fitWidth="1000.0" pickOnBounds="true" preserveRatio="false">
+        <ImageView fitHeight="1024.0" fitWidth="1920.0" pickOnBounds="true" preserveRatio="false">
             <image>
                 <Image url="@../images/baclgroung.png" />
             </image>
         </ImageView>
-        <Pane layoutX="71.0" layoutY="69.0" prefHeight="485.0" prefWidth="357.0" style="-fx-background-color: #1A1D22; -fx-border-color: #5E9F5A; -fx-border-width: 6px;">
+        <Pane layoutX="245.0" layoutY="264.0" prefHeight="636.0" prefWidth="557.0" style="-fx-background-color: #1A1D22; -fx-border-color: #5E9F5A; -fx-border-width: 6px; -fx-border-radius: 5px; -fx-background-radius: 5px;">
             <children>
-                <Label layoutX="103.0" layoutY="70.0" text="Anmeldung" textFill="WHITE">
+                <Label layoutX="199.0" layoutY="62.0" text="Anmeldung" textFill="WHITE">
                     <font>
                         <Font name="Segoe UI Bold" size="29.0" />
                     </font>
                 </Label>
-                <Label layoutX="34.0" layoutY="123.0" text="Benutzername" textFill="WHITE">
+                <Label layoutX="138.0" layoutY="145.0" text="Benutzername" textFill="WHITE">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label layoutX="36.0" layoutY="188.0" text="Passwort" textFill="WHITE">
+                <Label layoutX="135.0" layoutY="220.0" text="Passwort" textFill="WHITE">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <TextField fx:id="usernameField" layoutX="34.0" layoutY="145.0" prefHeight="25.0" prefWidth="284.0" promptText="Benutzername" style="-fx-background-color: #ffffff; -fx-border-color: #ffffff;" />
-                <PasswordField fx:id="passwordField" layoutX="34.0" layoutY="211.0" prefHeight="25.0" prefWidth="284.0" promptText="passwort" style="-fx-background-color: #ffffff; -fx-border-color: #ffffff;" />
+                <TextField fx:id="usernameField" layoutX="137.0" layoutY="165.0" prefHeight="25.0" prefWidth="284.0" promptText="Benutzername" style="-fx-background-color: #ffffff; -fx-border-color: #ffffff;" />
+                <PasswordField fx:id="passwordField" layoutX="137.0" layoutY="240.0" prefHeight="25.0" prefWidth="284.0" promptText="passwort" style="-fx-background-color: #ffffff; -fx-border-color: #ffffff;" />
                 <Label fx:id="errorLabel" layoutX="36.0" layoutY="292.0" text="Fehler" textFill="RED" visible="false" />
-                <Button layoutX="82.0" layoutY="323.0" mnemonicParsing="false" onAction="#loginButtonClicked" prefHeight="35.0" prefWidth="208.0" style="-fx-background-color: #5E9F5A;" text="Anmelden" textFill="WHITE">
+                <Button layoutX="175.0" layoutY="331.0" mnemonicParsing="false" onAction="#loginButtonClicked" prefHeight="35.0" prefWidth="208.0" style="-fx-background-color: #5E9F5A;" text="Anmelden" textFill="WHITE">
                     <font>
                         <Font name="System Bold" size="14.0" />
                     </font>
                 </Button>
-                <Button layoutX="104.0" layoutY="427.0" mnemonicParsing="false" onAction="#signUpButtonClicked" prefHeight="30.0" prefWidth="150.0" style="-fx-background-color: #5E9F5A;" text="Registrieren" textFill="WHITE">
+                <Button layoutX="204.0" layoutY="474.0" mnemonicParsing="false" onAction="#signUpButtonClicked" prefHeight="30.0" prefWidth="150.0" style="-fx-background-color: #5E9F5A;" text="Registrieren" textFill="WHITE">
                     <font>
                         <Font name="System Bold" size="14.0" />
                     </font>
                 </Button>
-                <Label layoutX="18.0" layoutY="396.0" text="Haben Sie noch kein Konto?" textFill="WHITE" />
+                <Label layoutX="14.0" layoutY="436.0" text="Haben Sie noch kein Konto?" textFill="WHITE" />
             </children>
         </Pane>
-        <ImageView fitHeight="131.0" fitWidth="115.0" layoutX="882.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
+        <ImageView fitHeight="131.0" fitWidth="115.0" layoutX="1789.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../images/logo.png" />
             </image>
