--- a/src/main/resources/org.example.arzttermin/View/signup.fxml
+++ b/src/main/resources/org.example.arzttermin/View/signup.fxml
@@ -45,7 +45,7 @@
                     <Font name="System Bold" size="12.0" />
                 </font>
             </Label>
-            <Label layoutX="30.0" layoutY="350.0" prefHeight="20.0" prefWidth="98.0" text="Email" textFill="WHITE">
+            <Label layoutX="30.0" layoutY="350.0" prefHeight="20.0" prefWidth="98.0" text="E-mail" textFill="WHITE">
                 <font>
                     <Font name="System Bold" size="12.0" />
                 </font>
@@ -63,20 +63,20 @@
             <TextField fx:id="firstNameTextField" layoutX="180.0" layoutY="163.0" prefHeight="25.0" prefWidth="278.0" promptText="Vorname" style="-fx-background-color: #ffffff;" />
             <TextField fx:id="lastNameTextField" layoutX="180.0" layoutY="200.0" prefHeight="25.0" prefWidth="278.0" promptText="Nachname" style="-fx-background-color: #ffffff;" />
             <TextField fx:id="usernameTextField" layoutX="180.0" layoutY="235.0" prefHeight="25.0" prefWidth="278.0" promptText="Benutzername" style="-fx-background-color: #ffffff;" />
-            <TextField fx:id="emailTextField" layoutX="180.0" layoutY="345.0" prefHeight="25.0" prefWidth="278.0" promptText="Email" style="-fx-background-color: #ffffff;" />
-            <PasswordField fx:id="passwordTextField" layoutX="180.0" layoutY="272.0" prefHeight="25.0" prefWidth="278.0" promptText="Password" style="-fx-background-color: #ffffff;" />
+            <TextField fx:id="emailTextField" layoutX="180.0" layoutY="345.0" prefHeight="25.0" prefWidth="278.0" promptText="E-mail" style="-fx-background-color: #ffffff;" />
+            <PasswordField fx:id="passwordTextField" layoutX="180.0" layoutY="272.0" prefHeight="25.0" prefWidth="278.0" promptText="Passwort" style="-fx-background-color: #ffffff;" />
             <PasswordField fx:id="confirmPasswordTextField" layoutX="180.0" layoutY="311.0" prefHeight="25.0" prefWidth="278.0" promptText="Passwort bestätigen" style="-fx-background-color: #ffffff;" />
             <RadioButton fx:id="maleRadioButton" layoutX="185.0" layoutY="421.0" mnemonicParsing="false" text="Männlich" textFill="WHITE" />
             <RadioButton fx:id="femaleRadioButton" layoutX="264.0" layoutY="421.0" mnemonicParsing="false" text="Weiblich" textFill="WHITE" />
             <RadioButton fx:id="otherRadioButton" layoutX="341.0" layoutY="421.0" mnemonicParsing="false" text="Divers" textFill="WHITE" />
             <DatePicker fx:id="dobDatePicker" layoutX="180.0" layoutY="382.0" prefHeight="25.0" prefWidth="278.0" style="-fx-background-color: #5E9F5A;" />
             <Label fx:id="errorLabel" layoutX="17.0" layoutY="496.0" text="Error" textFill="RED" visible="false" />
-            <Button fx:id="signUpButton" layoutX="139.0" layoutY="540.0" mnemonicParsing="false" onAction="#signUpButtonClicked" prefHeight="40.0" prefWidth="280.0" style="-fx-background-color: #5E9F5A #5E9F5A; -fx-background-radius: 10px; -fx-border-radius: 10px;" text="Registrieren" textFill="WHITE">
+            <Button fx:id="signUpButton" layoutX="139.0" layoutY="540.0" mnemonicParsing="false" onAction="#signUpButtonClicked" prefHeight="40.0" prefWidth="280.0" style="-fx-background-color: #5E9F5A #5E9F5A; -fx-background-radius: 10px;" text="Registrieren" textFill="WHITE">
                 <font>
                     <Font name="System Bold" size="14.0" />
                 </font>
             </Button>
-            <Button fx:id="loginButton" layoutX="17.0" layoutY="14.0" mnemonicParsing="false" onAction="#loginButtonClicked" prefHeight="11.0" prefWidth="98.0" style="-fx-background-color: WHITE; -fx-border-color: #5E9F5A #5E9F5A; -fx-background-radius: 15px; -fx-border-radius: 12px; -fx-border-width: 2px;" text="Anmelden" textFill="#5e9f5a">
+            <Button fx:id="loginButton" layoutX="17.0" layoutY="14.0" mnemonicParsing="false" onAction="#loginButtonClicked" prefHeight="11.0" prefWidth="98.0" style="-fx-background-color: #5E9F5A; -fx-background-radius: 10px;" text="Anmelden" textFill="WHITE">
                 <font>
                     <Font name="System Bold" size="12.0" />
                 </font>
