--- a/src/main/resources/org.example.arzttermin/View/signup.fxml
+++ b/src/main/resources/org.example.arzttermin/View/signup.fxml
@@ -10,87 +10,148 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="rootPane" prefHeight="1024.0" prefWidth="1920.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.example.arzttermin.ViewModel.SignUpController">
+<AnchorPane fx:id="rootPane"
+            prefHeight="1024.0" prefWidth="1920.0"
+            xmlns="http://javafx.com/javafx/25"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="org.example.arzttermin.ViewModel.SignUpController">
+
     <children>
-        <ImageView fitHeight="1024.0" fitWidth="1920.0" pickOnBounds="true" preserveRatio="false">
+        <ImageView pickOnBounds="true" preserveRatio="false"
+                   fitWidth="${rootPane.width}"
+                   fitHeight="${rootPane.height}">
             <image>
                 <Image url="@../images/baclgroung.png" />
             </image>
         </ImageView>
-        <ImageView fitHeight="131.0" fitWidth="115.0" layoutX="1789.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+
+        <StackPane AnchorPane.topAnchor="0.0"
+                   AnchorPane.bottomAnchor="0.0"
+                   AnchorPane.leftAnchor="0.0"
+                   AnchorPane.rightAnchor="0.0">
+
+            <children>
+                <Pane prefHeight="636.0" prefWidth="557.0"
+                      maxHeight="636.0" maxWidth="557.0"
+                      style="-fx-background-color: #1A1D22; -fx-border-color: #5E9F5A; -fx-border-width: 6px; -fx-border-radius: 5px; -fx-background-radius: 5px;">
+
+                    <children>
+                        <Label layoutX="187.0" layoutY="69.0" text="Registrierung" textFill="WHITE">
+                            <font>
+                                <Font name="Segoe UI Bold" size="29.0" />
+                            </font>
+                        </Label>
+
+                        <Label layoutX="30.0" layoutY="166.0" prefHeight="20.0" prefWidth="98.0" text="Vorname" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="12.0" />
+                            </font>
+                        </Label>
+
+                        <Label layoutX="30.0" layoutY="203.0" prefHeight="20.0" prefWidth="98.0" text="Nachname" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="12.0" />
+                            </font>
+                        </Label>
+
+                        <Label layoutX="30.0" layoutY="239.0" prefHeight="20.0" prefWidth="98.0" text="Benutzername" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="12.0" />
+                            </font>
+                        </Label>
+
+                        <Label layoutX="30.0" layoutY="276.0" prefHeight="20.0" prefWidth="98.0" text="Passwort" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="12.0" />
+                            </font>
+                        </Label>
+
+                        <Label layoutX="30.0" layoutY="312.0" prefHeight="20.0" prefWidth="123.0" text="Passwort bestätigen" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="12.0" />
+                            </font>
+                        </Label>
+
+                        <Label layoutX="30.0" layoutY="350.0" prefHeight="20.0" prefWidth="98.0" text="E-mail" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="12.0" />
+                            </font>
+                        </Label>
+
+                        <Label layoutX="30.0" layoutY="385.0" prefHeight="20.0" prefWidth="98.0" text="Geburtsdatum" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="12.0" />
+                            </font>
+                        </Label>
+
+                        <Label layoutX="30.0" layoutY="420.0" prefHeight="20.0" prefWidth="98.0" text="Geschlecht" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="12.0" />
+                            </font>
+                        </Label>
+
+                        <TextField fx:id="firstNameTextField" layoutX="180.0" layoutY="163.0" prefHeight="25.0" prefWidth="278.0"
+                                   promptText="Vorname" style="-fx-background-color: #ffffff;" />
+                        <TextField fx:id="lastNameTextField" layoutX="180.0" layoutY="200.0" prefHeight="25.0" prefWidth="278.0"
+                                   promptText="Nachname" style="-fx-background-color: #ffffff;" />
+                        <TextField fx:id="usernameTextField" layoutX="180.0" layoutY="235.0" prefHeight="25.0" prefWidth="278.0"
+                                   promptText="Benutzername" style="-fx-background-color: #ffffff;" />
+
+                        <PasswordField fx:id="passwordTextField" layoutX="180.0" layoutY="272.0" prefHeight="25.0" prefWidth="278.0"
+                                       promptText="Passwort" style="-fx-background-color: #ffffff;" />
+                        <PasswordField fx:id="confirmPasswordTextField" layoutX="180.0" layoutY="311.0" prefHeight="25.0" prefWidth="278.0"
+                                       promptText="Passwort bestätigen" style="-fx-background-color: #ffffff;" />
+
+                        <TextField fx:id="emailTextField" layoutX="180.0" layoutY="345.0" prefHeight="25.0" prefWidth="278.0"
+                                   promptText="E-mail" style="-fx-background-color: #ffffff;" />
+
+                        <DatePicker fx:id="dobDatePicker" layoutX="180.0" layoutY="382.0" prefHeight="25.0" prefWidth="278.0"
+                                    style="-fx-background-color: #5E9F5A;" />
+
+                        <RadioButton fx:id="maleRadioButton" layoutX="185.0" layoutY="421.0" mnemonicParsing="false"
+                                     text="Männlich" textFill="WHITE" />
+                        <RadioButton fx:id="femaleRadioButton" layoutX="264.0" layoutY="421.0" mnemonicParsing="false"
+                                     text="Weiblich" textFill="WHITE" />
+                        <RadioButton fx:id="otherRadioButton" layoutX="341.0" layoutY="421.0" mnemonicParsing="false"
+                                     text="Divers" textFill="WHITE" />
+
+                        <Label fx:id="errorLabel" layoutX="17.0" layoutY="496.0" text="Error" textFill="RED" visible="false" />
+
+                        <Button fx:id="signUpButton" layoutX="139.0" layoutY="540.0" mnemonicParsing="false"
+                                onAction="#signUpButtonClicked" prefHeight="40.0" prefWidth="280.0"
+                                style="-fx-background-color: #5E9F5A; -fx-background-radius: 10px;"
+                                text="Registrieren" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="14.0" />
+                            </font>
+                        </Button>
+
+                        <Button fx:id="loginButton" layoutX="17.0" layoutY="14.0" mnemonicParsing="false"
+                                onAction="#loginButtonClicked" prefHeight="11.0" prefWidth="98.0"
+                                style="-fx-background-color: #5E9F5A; -fx-background-radius: 10px;"
+                                text="Anmelden" textFill="WHITE">
+                            <font>
+                                <Font name="System Bold" size="12.0" />
+                            </font>
+                        </Button>
+
+                    </children>
+                </Pane>
+            </children>
+        </StackPane>
+
+
+        <ImageView fitHeight="131.0" fitWidth="115.0"
+                   pickOnBounds="true" preserveRatio="true"
+                   AnchorPane.topAnchor="10.0"
+                   AnchorPane.rightAnchor="10.0">
             <image>
                 <Image url="@../images/logo.png" />
             </image>
         </ImageView>
-        <Pane layoutX="245.0" layoutY="264.0" prefHeight="636.0" prefWidth="557.0" style="-fx-background-color: #1A1D22; -fx-border-color: #5E9F5A; -fx-border-width: 6px; -fx-border-radius: 5px; -fx-background-radius: 5px;">
-            <Label layoutX="187.0" layoutY="69.0" text="Registrierung" textFill="WHITE">
-                <font>
-                    <Font name="Segoe UI Bold" size="29.0" />
-                </font>
-            </Label>
-            <Label layoutX="30.0" layoutY="166.0" prefHeight="20.0" prefWidth="98.0" text="Vorname" textFill="WHITE">
-                <font>
-                    <Font name="System Bold" size="12.0" />
-                </font>
-            </Label>
-            <Label layoutX="30.0" layoutY="203.0" prefHeight="20.0" prefWidth="98.0" text="Nachname" textFill="WHITE">
-                <font>
-                    <Font name="System Bold" size="12.0" />
-                </font>
-            </Label>
-            <Label layoutX="30.0" layoutY="239.0" prefHeight="20.0" prefWidth="98.0" text="Benutzername" textFill="WHITE">
-                <font>
-                    <Font name="System Bold" size="12.0" />
-                </font>
-            </Label>
-            <Label layoutX="30.0" layoutY="350.0" prefHeight="20.0" prefWidth="98.0" text="E-mail" textFill="WHITE">
-                <font>
-                    <Font name="System Bold" size="12.0" />
-                </font>
-            </Label>
-            <Label layoutX="30.0" layoutY="276.0" prefHeight="20.0" prefWidth="98.0" text="Passwort" textFill="WHITE">
-                <font>
-                    <Font name="System Bold" size="12.0" />
-                </font>
-            </Label>
-            <Label layoutX="30.0" layoutY="312.0" prefHeight="20.0" prefWidth="123.0" text="Passwort bestätigen" textFill="WHITE">
-                <font>
-                    <Font name="System Bold" size="12.0" />
-                </font>
-            </Label>
-            <TextField fx:id="firstNameTextField" layoutX="180.0" layoutY="163.0" prefHeight="25.0" prefWidth="278.0" promptText="Vorname" style="-fx-background-color: #ffffff;" />
-            <TextField fx:id="lastNameTextField" layoutX="180.0" layoutY="200.0" prefHeight="25.0" prefWidth="278.0" promptText="Nachname" style="-fx-background-color: #ffffff;" />
-            <TextField fx:id="usernameTextField" layoutX="180.0" layoutY="235.0" prefHeight="25.0" prefWidth="278.0" promptText="Benutzername" style="-fx-background-color: #ffffff;" />
-            <TextField fx:id="emailTextField" layoutX="180.0" layoutY="345.0" prefHeight="25.0" prefWidth="278.0" promptText="E-mail" style="-fx-background-color: #ffffff;" />
-            <PasswordField fx:id="passwordTextField" layoutX="180.0" layoutY="272.0" prefHeight="25.0" prefWidth="278.0" promptText="Passwort" style="-fx-background-color: #ffffff;" />
-            <PasswordField fx:id="confirmPasswordTextField" layoutX="180.0" layoutY="311.0" prefHeight="25.0" prefWidth="278.0" promptText="Passwort bestätigen" style="-fx-background-color: #ffffff;" />
-            <RadioButton fx:id="maleRadioButton" layoutX="185.0" layoutY="421.0" mnemonicParsing="false" text="Männlich" textFill="WHITE" />
-            <RadioButton fx:id="femaleRadioButton" layoutX="264.0" layoutY="421.0" mnemonicParsing="false" text="Weiblich" textFill="WHITE" />
-            <RadioButton fx:id="otherRadioButton" layoutX="341.0" layoutY="421.0" mnemonicParsing="false" text="Divers" textFill="WHITE" />
-            <DatePicker fx:id="dobDatePicker" layoutX="180.0" layoutY="382.0" prefHeight="25.0" prefWidth="278.0" style="-fx-background-color: #5E9F5A;" />
-            <Label fx:id="errorLabel" layoutX="17.0" layoutY="496.0" text="Error" textFill="RED" visible="false" />
-            <Button fx:id="signUpButton" layoutX="139.0" layoutY="540.0" mnemonicParsing="false" onAction="#signUpButtonClicked" prefHeight="40.0" prefWidth="280.0" style="-fx-background-color: #5E9F5A #5E9F5A; -fx-background-radius: 10px;" text="Registrieren" textFill="WHITE">
-                <font>
-                    <Font name="System Bold" size="14.0" />
-                </font>
-            </Button>
-            <Button fx:id="loginButton" layoutX="17.0" layoutY="14.0" mnemonicParsing="false" onAction="#loginButtonClicked" prefHeight="11.0" prefWidth="98.0" style="-fx-background-color: #5E9F5A; -fx-background-radius: 10px;" text="Anmelden" textFill="WHITE">
-                <font>
-                    <Font name="System Bold" size="12.0" />
-                </font>
-            </Button>
-            <Label layoutX="30.0" layoutY="385.0" prefHeight="20.0" prefWidth="98.0" text="Geburtsdatum" textFill="WHITE">
-                <font>
-                    <Font name="System Bold" size="12.0" />
-                </font>
-            </Label>
-            <Label layoutX="30.0" layoutY="420.0" prefHeight="20.0" prefWidth="98.0" text="Geschlecht" textFill="WHITE">
-                <font>
-                    <Font name="System Bold" size="12.0" />
-                </font>
-            </Label>
-        </Pane>
+
     </children>
 </AnchorPane>
